--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "xnoxs-dork"
-version = "1.0.0"
+version = "3.0.0"
 description = "SQL Injection & XSS Vulnerability Scanner - Security Research Tool"
 requires-python = ">=3.8"
 dependencies = [
     "colorama>=0.4.6",
     "requests>=2.32.5",
     "beautifulsoup4>=4.12.0",
+    "xnoxs-engine>=2.0.0"
 ]
 
 [project.scripts]
